tests/semantic/type_dupl/type_dupl.err
Error: Redefinition of type Type in file type_dupl.dl at line 4
.type Type
^----------
Previous definition in file type_dupl.dl at line 3
.type Type
^----------
1 errors generated, evaluation aborted
