tests/semantic/type_dupl/type_dupl.dl
// Negative test case for a duplicate definition of a relation

.type Type
.type Type

.decl R(type1:Type, type2:Type)
